# ai-sdk-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  deny.toml  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
ai-sdk-core/: Cargo.toml
ai-sdk-core/examples/: embed_many.rs  embed_single.rs
ai-sdk-core/src/: embed_many.rs  error.rs  generate_text.rs  lib.rs  retry.rs  stop_condition.rs  stream_text.rs  tool.rs
ai-sdk-core/src/agent/: agent.rs  stop_condition.rs  tool_loop_agent.rs  tool_loop_agent_settings.rs
ai-sdk-core/src/generate_object/: output_strategy.rs
ai-sdk-core/src/middleware/: default_settings_middleware.rs  simulate_streaming_middleware.rs  wrap_language_model.rs
ai-sdk-core/src/registry/: builder.rs  custom_provider.rs  error.rs  provider_registry.rs
ai-sdk-core/src/tool/: mod.rs  tool_output.rs
ai-sdk-core/src/util/: base64.rs  download.rs  fix_json.rs  mod.rs
ai-sdk-core/tests/: embedding_test.rs
ai-sdk-openai/: Cargo.toml  README.md
ai-sdk-openai/examples/: README.md  embedding_basic.rs  generate_object.rs  image_basic.rs  middleware_demo.rs  multi_provider_registry.rs  multimodal_chat.rs  openai_basic.rs  speech_basic.rs  stream_object.rs  streaming_tool.rs  structured_tool_output.rs  tool_loop_agent.rs  transcription_basic.rs
ai-sdk-openai/src/: api_types.rs  chat.rs  embedding.rs  error.rs  image.rs  lib.rs  model_detection.rs  multimodal.rs  openai_config.rs  provider.rs  speech.rs  transcription.rs
ai-sdk-openai/src/chat/: mod.rs
ai-sdk-openai/src/embedding/: options.rs
ai-sdk-openai/src/image/: mod.rs  model.rs
ai-sdk-openai/src/responses/: api_types_test.rs  model.rs  options.rs
ai-sdk-openai/src/transcription/: mod.rs  options.rs
ai-sdk-openai/tests/: embedding_test.rs  image_test.rs  integration_test.rs  speech_test.rs  tool_calling_test.rs  transcription_test.rs
ai-sdk-openai/tests/chat/: advanced_features_test.rs  basic_test.rs  extension_settings_test.rs  mod.rs  model_specific_test.rs  response_format_test.rs  settings_test.rs  streaming_test.rs  tool_calling_test.rs
ai-sdk-openai/tests/chat/fixtures/: README.md  chat-multiple-tools-1.json  chat-no-tool-call-1.json  chat-streaming-annotations-1-chunks.txt  chat-tool-calling-1.json  chat-tool-calling-calculate-1.json
ai-sdk-openai/tests/common/: fixtures.rs  mock_server.rs  mod.rs
ai-sdk-openai/tests/fixtures/: chat-completion-simple-1-chunks.txt  chat-tool-calling-1-chunks.txt  embedding-512-dims-1.json  embedding-basic-1.json  image-dalle3-1.json
ai-sdk-provider/: Cargo.toml  README.md
ai-sdk-provider-utils/: Cargo.toml
ai-sdk-provider/examples/: reranking_trait.rs
ai-sdk-provider/src/: json_value.rs  lib.rs
ai-sdk-provider/src/embedding_model/: embed_options.rs  embed_response.rs  mod.rs  trait_def.rs
ai-sdk-provider/src/image_model/: generate_options.rs  generate_response.rs  mod.rs  trait_def.rs
ai-sdk-provider/src/language_model/: call_options.rs  content.rs  finish_reason.rs  mod.rs  prompt.rs  response_metadata.rs  stream.rs  tool_result_output.rs  tools.rs  trait_def.rs  usage.rs
ai-sdk-provider/src/reranking_model/: mod.rs  rerank_options.rs  rerank_response.rs
ai-sdk-provider/src/shared/: mod.rs
ai-sdk-provider/src/speech_model/: generate_response.rs  mod.rs  trait_def.rs
ai-sdk-provider/src/transcription_model/: trait_def.rs
crates/ai-sdk-core/: Cargo.toml  README.md
crates/ai-sdk-core/src/: embed.rs  error.rs  generate_text.rs  stop_condition.rs  stream_text.rs
crates/ai-sdk-core/src/agent/: mod.rs  step_result.rs
crates/ai-sdk-core/src/generate_object/: builder.rs  mod.rs  stream_object.rs
crates/ai-sdk-core/src/middleware/: language_model_middleware.rs  mod.rs
crates/ai-sdk-core/src/registry/: mod.rs
crates/ai-sdk-core/src/tool/: mod.rs  tool_output.rs
crates/ai-sdk-core/src/util/: deep_equal.rs  media_type.rs  parse_partial_json.rs
crates/ai-sdk-openai/: Cargo.toml  RESPONSES_API_IMPLEMENTATION.md
crates/ai-sdk-openai/examples/: embedding_basic.rs  responses_basic.rs  stream_object.rs  tool_loop_agent.rs
crates/ai-sdk-openai/src/: error.rs  provider.rs
crates/ai-sdk-openai/src/chat/: model.rs  options.rs
crates/ai-sdk-openai/src/embedding/: mod.rs  model.rs
crates/ai-sdk-openai/src/responses/: api_types.rs  mod.rs
crates/ai-sdk-openai/src/speech/: mod.rs  model.rs  options.rs
crates/ai-sdk-openai/src/transcription/: model.rs
crates/ai-sdk-openai/tests/: chat.rs  speech_test.rs  transcription_test.rs
crates/ai-sdk-openai/tests/chat/: advanced_features_test.rs  basic_test.rs  mod.rs  model_specific_test.rs  tool_calling_test.rs
crates/ai-sdk-openai/tests/chat/fixtures/: README.md  chat-completion-simple-1.json  chat-streaming-empty-1-chunks.txt  chat-streaming-multiple-tools-1-chunks.txt  chat-tool-calling-calculate-1-chunks.txt
crates/ai-sdk-openai/tests/common/: fixtures.rs
crates/ai-sdk-openai/tests/fixtures/: README.md
crates/ai-sdk-provider/: Cargo.toml
crates/ai-sdk-provider-utils/src/: lib.rs
crates/ai-sdk-provider/examples/: reranking_trait.rs
crates/ai-sdk-provider/src/embedding_model/: mod.rs
crates/ai-sdk-provider/src/image_model/: generate_options.rs  generate_response.rs  mod.rs
crates/ai-sdk-provider/src/language_model/: call_options.rs  data_content.rs  prompt.rs  trait_def.rs
crates/ai-sdk-provider/src/provider/: mod.rs
crates/ai-sdk-provider/src/reranking_model/: README.md  rerank_options.rs  trait_def.rs
crates/ai-sdk-provider/src/shared/: mod.rs
crates/ai-sdk-provider/src/speech_model/: generate_options.rs  warning.rs
crates/ai-sdk-provider/src/transcription_model/: mod.rs  transcribe_options.rs  transcribe_response.rs  warning.rs
