[workspace]
members = ["ai-sdk-provider", "ai-sdk-openai", "ai-sdk-core"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khongtrunght/ai-sdk-rust"
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
derive_builder = "0.20"
backoff = "0.4"
tracing = "0.1"
