[workspace]
members = [
  "ai-sdk-provider",
  "ai-sdk-openai",
  "ai-sdk-core",
  "ai-sdk-provider-utils",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khongtrunght/ai-sdk-rust"
rust-version = "1.70"

[workspace.dependencies]
ai-sdk-provider = { version = "0.2.0", path = "ai-sdk-provider" }
ai-sdk-core = { version = "0.2.0", path = "ai-sdk-core" }
ai-sdk-openai = { version = "0.2.0", path = "ai-sdk-openai" }
ai-sdk-provider-utils = { version = "0.1.0", path = "ai-sdk-provider-utils" }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Error handling
thiserror = "2.0"
