[package]
name = "ai-sdk-core"
version.workspace = true
edition.workspace = true
description = "High-level APIs for AI SDK - text generation, embeddings, and tool execution"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/ai-sdk-core"
readme = "README.md"
keywords = ["ai", "llm", "streaming", "embeddings", "async"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ai-sdk-provider = { version = "0.1.1", path = "../ai-sdk-provider" }
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
async-stream.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
backoff = "0.4"
tracing = "0.1"

[dev-dependencies]
ai-sdk-openai = { version = "0.1.1", path = "../ai-sdk-openai" }
tokio-test = "0.4"
