[package]
name = "ai-sdk-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI provider for AI SDK - GPT, DALL-E, Whisper, and Embeddings"
documentation = "https://docs.rs/ai-sdk-openai"
readme = "README.md"
keywords = ["openai", "gpt", "dalle", "whisper", "embeddings"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ai-sdk-provider = { version = "0.1.2", path = "../ai-sdk-provider" }
ai-sdk-core = { version = "0.1.2", path = "../ai-sdk-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"

[[example]]
name = "openai_basic"
path = "examples/openai_basic.rs"

[[example]]
name = "embedding_basic"
path = "examples/embedding_basic.rs"

[[example]]
name = "image_basic"
path = "examples/image_basic.rs"

[[example]]
name = "transcription_basic"
path = "examples/transcription_basic.rs"

[[example]]
name = "multimodal_chat"
path = "examples/multimodal_chat.rs"

[[example]]
name = "middleware_demo"
path = "examples/middleware_demo.rs"

[[example]]
name = "tool_loop_agent"
path = "examples/tool_loop_agent.rs"
