[package]
name = "ai-sdk-provider-utils"
version.workspace = true
edition.workspace = true
description = "Utility functions and helpers for AI SDK providers"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/ai-sdk-provider-utils"
readme = "README.md"
keywords = ["ai", "llm", "provider", "utils", "async"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, optional = true }

[features]
default = []
reqwest = ["dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
