[package]
name = "ai-sdk-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provider specification for AI SDK (Rust)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
