[package]
name = "ai-sdk-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Provider specification for AI SDK - trait-based interfaces for AI models"
documentation = "https://docs.rs/ai-sdk-provider"
readme = "README.md"
keywords = ["ai", "llm", "provider", "api", "sdk"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
